# VideoCollectionSpeechFinder

./: .gitignore  .gitmodules  README.md  config.ini  config.json
database/: delete_tables.py  setup.py  test_operations.py
transcript_searcher/: CMakeLists.txt
transcript_searcher/include/: tf_idf_transcript_search.h  transcript_search_algorithm.h  transcript_searcher.h
transcript_searcher/src/: main.cpp  tf_idf_transcript_search.cpp  transcript_searcher.cpp  transcript_searcher_socketio_client.cpp
video_collection_speech_processing/: __init__.py  main.py  video_collection_speech_processor.py
video_collection_speech_processing/transcript_preprocessing/: __init__.py  tf_idf_transcript_preprocessor.py  transcript_preprocessor.py
video_collection_speech_processing/video_transcription/: __init__.py  video_transcriber.py
video_transcriber/: main.py  video_transcriber.py
